fixtures/semantic/invalid/08-vr-r2-dot-reference-string.fl
component DotReferenceString(
  prop label-text: text
) {
  surface {}

  intent trigger: "action" {
    label: "@label-text.value"
  }
}
